--- a/apps.html
+++ b/apps.html
@@ -6,17 +6,17 @@
     
     <script>
     var clubs = 
-    "{ \"DECA\":[ \"Marketing\", \"Events\", \"Business Development\", \"Training\"]," + 
-    "\"MESA\":[ \"Marketing\", \"Business Development\", \"Finance\", \"Student Engagement\", \"Clubs & Academics\"]," + 
+    "{ \"DECA\":[ \"Director of Marketing\", \"Director of Events\", \"Director of Digital Marketing\", \"Director of Finance\", \"Director of Training\", \"Director of Human Resources\", \"Director of Corporate Relations\", \"Director of Information Technology\"]," + 
+    "\"MESA\":[ \"Director of Operations\", \"Director of Curriculum\", \"Director of Finance\", \"Director of Corporate Relations\", \"Director of Human Resources\", \"Director of Marketing\", \"Director of Web Development\"]," + 
     "\"IS\":[ \"Marketing\", \"Operations\", \"Business Development\"]," + 
-    "\"TMG\":[ \"Marketing\", \"Business Development\", \"Events\", \"IT\"]," + 
-    "\"HRA\":[ \"Marketing & Analytics\", \"Operations\", \"Corporate Relations\", \"Project Management\"]," + 
-    "\"AOA\":[ \"Marketing\", \"Events\", \"Business Development\"]," + 
-    "\"MIBA\":[ \"Marketing\", \"Events\", \"Business Development\", \"External Relations\", \"Innovation\"]," + 
-    "\"MTA\":[ \"Marketing\", \"Operations\", \"Corporate Relations\", \"Web Development\"]," + 
-    "\"WIBA\":[ \"Marketing\", \"Events\"]," + 
-    "\"ENIGMA\":[ \"Marketing\", \"Operations\"]," + 
-    "\"SBA\":[ \"Marketing\", \"Operations\", \"Corporate Relations\"]" + 
+    "\"TMG\":[ \"Marketing Director\", \"Events Director\", \"Project Director\", \"Social Media Director\", \"Corporate Relations Director\", \"Finance Director\", \"Curriculum Director\"]," + 
+    "\"HRA\":[ \"Director of Finance\", \"Director of Event Logistics\", \"Director of Multimedia Design\", \"Director of Web and Social Media\", \"Director of Member Engagement\", \"Director of Training and Development\", \"Director of Project Management\", \"Director of Corporate Relations\"]," + 
+    "\"AOA\":[ \"Marketing Director\", \"Events Director\", \"CR Director\", \"Finance Director\", \"HR Director\", \"Data Analytics Director\", \"Digital Media Director\"]," + 
+    "\"MIBA\":[ \"Marketing\", \"Events\", \"Business Operations\", \"External Relations\", \"Innovation\"]," + 
+    "\"MTA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of Corporate Relations\", \"Director of Web Development\", \"Director of Curriculum\", \"Director of Case Competition\", \"Director of Finance\", \"Director of Internal Affairs\"]," + 
+    "\"WIBA\":[ \"Director of Digital Channels\", \"Director of Communications\", \"Director of Events\", \"Director of Strategic Initiatives\"]," + 
+    "\"ENIGMA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of IT\"]," + 
+    "\"SBA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of Corporate Relations\"]" + 
     "}";
 
     
