DECA changed name for Training Director

--- a/clubs.html
+++ b/clubs.html
@@ -6,14 +6,14 @@
     
     <script>
     var clubs = 
-    "{ \"DECA\":[ \"Director of Marketing\", \"Director of Events\", \"Director of Digital Marketing\", \"Director of Finance\", \"Director of Training\", \"Director of Human Resources\", \"Director of Corporate Relations\", \"Director of Information Technology\"]," + 
+    "{ \"DECA\":[ \"Director of Marketing\", \"Director of Events\", \"Director of Digital Marketing\", \"Director of Finance\", \"Director of Delegate Development\", \"Director of Human Resources\", \"Director of Corporate Relations\", \"Director of Information Technology\"]," + 
     "\"MESA\":[ \"Social Operations Manager\", \"International Advocacy Manager\", \"Marketing Manager\", \"Academic Advocacy Manager\", \"Operations Manager\", \"Alumni Connections Manager\", \"Double Degree Advocacy Manager\", \"Human Resources Manager\", \"Finance Manager\", \"Corporate Relations Manager\"]," + 
     "\"IS\":[ \"Director of Operations\", \"Director of Curriculum\", \"Director of Finance\", \"Director of Corporate Relations\", \"Director of Human Resources\", \"Director of Marketing\", \"Director of Web Development\"]," + 
     "\"TMG\":[ \"Marketing Director\", \"Events Director\", \"Project Director\", \"Social Media Director\", \"Corporate Relations Director\", \"Finance Director\", \"Curriculum Director\"]," + 
     "\"HRA\":[ \"Director of Finance\", \"Director of Event Logistics\", \"Director of Multimedia Design\", \"Director of Web and Social Media\", \"Director of Member Engagement\", \"Director of Training and Development\", \"Director of Project Management\", \"Director of Corporate Relations\"]," + 
     "\"AOA\":[ \"Marketing Director\", \"Events Director\", \"CR Director\", \"Finance Director\", \"HR Director\", \"Data Analytics Director\", \"Digital Media Director\"]," + 
     "\"MIBA\":[ \"Marketing\", \"Events\", \"Business Operations\", \"External Relations\", \"Innovation\"]," + 
-    "\"MTA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of Corporate Relations\", \"Director of Web Development\", \"Director of Curriculum\", \"Director of Case Competition\", \"Director of Finance\", \"Director of Internal Affairs\"]," + 
+    "\"MTA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of Corporate Relations\", \"Director of Web Development\", \"Director of Curriculum\", \"Director of Case Competition\", \"Director of Finance\", \"Director of Internal Affairs\"]," +
     "\"WIBA\":[ \"Director of Digital Channels\", \"Director of Communications\", \"Director of Events\", \"Director of Strategic Initiatives\"]," + 
     "\"ENIGMA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of IT\"]," + 
     "\"SBA\":[ \"Director of Marketing\", \"Director of Operations\", \"Director of Corporate Relations\"]" + 
